# huawei-software-challenge2025

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  constants.h  disk_head_manager.cpp  disk_head_manager.h  disk_head_manager_bal.cpp  disk_manager.cpp  disk_manager.h  frequency_data.cpp  frequency_data.h  main.cpp  object_manager.cpp  object_manager.h  read_request_manager.cpp  read_request_manager.h
